# Aura

./: .env.dev  .gitignore  DB.yaml  README.md  UI.py  aura.py  bot.py  config.py  main.py  pyproject.toml  requirements.txt
Aura/plugins/market/: __init__.py  get_price.py
Aura/plugins/other/: __init__.py  get_line.py
GUI/: mainFrame.py
plugins/: __init__.py  get_price.py
src/plugins/character/: __init__.py  datasource.py  test.py
src/plugins/databasemanager/: __init__.py  database.py  market_data.py
src/plugins/market/: __init__.py  database.py  datasource.py  makedb.py  marketdata.py  refreshtoken.py
src/plugins/ping/: __init__.py  config.py
