[tool.poetry]
name = "Aura"
version = "0.1.0"
description = "Aura"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
nonebot2 = "^2.0.0rc2"
pyunit-time = "^2021.2.2"
Pillow = "^9.1.0"
beautifulsoup4 = "^4.11.1"
playwright = "^1.24.0"
aiofiles = "^0.8.0"
Markdown = "^3.4.1"
tortoise-orm = "^0.19.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.poetry.group.dev.dependencies]
nonebug = "^0.2.1"

[tool.nonebot]
plugins = ["nonebot_plugin_rauthman", "nonebot_plugin_what2eat", "nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
